--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   
   window.onload = function()
   {
-    document.addEventListener("deviceready", init, false);  
+    //document.addEventListener("deviceready", init, false);  
+    init();
   }
   
   funtion init()
