--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     var longitude = position.coords.longitude;
     
     document.getElementById("lat").innerHTML = latitude;
-    docuemnt.getElementById("long").innerHTML = longitude;
+    document.getElementById("long").innerHTML = longitude;
   }
   
   function onError(error)
