--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 
   funtion init()
   {
-    
-    navigator.geolocation.getCurrentPosition(onSuccess, onError, enableHighAccuracy: true);
-  }
+    var options = ( enableHighAccuracy: true ); 
+    navigator.geolocation.getCurrentPosition(onSuccess, onError, options);
+  
   
   funtion onSuccess(position)
   {
@@ -33,7 +33,7 @@
   {
     alert(error.message);
   }
-  
+  }
   
 </script>
 </head>
