--- a/index.html
+++ b/index.html
@@ -22,11 +22,6 @@
           'Speed: '             + position.coords.speed             + '\n' +
           'Timestamp: '         + new Date(position.timestamp)      + '\n');
 
-    var latitude = position.coords.latitude;
-    var longitude = position.coords.longitude;
-    
-    document.getElementById("lat").innerHTML = latitude;
-    document.getElementById("long").innerHTML = longitude;
   }
   
   function onError(error)
@@ -34,11 +29,10 @@
     alert(error.message);
   }
   }
-  
+  init();
 </script>
 </head>
 <body>
-     Latitude: <span id="lat"></span>
-     Longitude: <span id="long"></span>
+
 </body>
 </html>
