--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 <head>
 <script>
 
+  window.onload = function()
+  {
+    document.addEventListener("deviceready", init, false);
+  }
+
   funtion init()
   {
     var options = ( enableHighAccuracy: true ); 
@@ -13,14 +18,12 @@
   
   funtion onSuccess(position)
   {
-    alert('Latitude: '          + position.coords.latitude          + '\n' +
-          'Longitude: '         + position.coords.longitude         + '\n' +
-          'Altitude: '          + position.coords.altitude          + '\n' +
-          'Accuracy: '          + position.coords.accuracy          + '\n' +
-          'Altitude Accuracy: ' + position.coords.altitudeAccuracy  + '\n' +
-          'Heading: '           + position.coords.heading           + '\n' +
-          'Speed: '             + position.coords.speed             + '\n' +
-          'Timestamp: '         + new Date(position.timestamp)      + '\n');
+      var latitude = position.coords.latitude;
+      var longitude = position.coords.longitude;
+      
+      document.getElementById("lat").innerHTML = latitude;
+      document.getElementById("long").innerHTML = longitude;
+
 
   }
   
@@ -33,6 +36,7 @@
 </script>
 </head>
 <body>
-
+    Latitude: <span id="lat"></span>
+    Longitude: <span id="long"></span>
 </body>
 </html>
