--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     // PhoneGap is ready
     //
     function onDeviceReady() {
-        navigator.geolocation.getCurrentPosition(onSuccess, onError, enableHighAccuracy: true);
+        navigator.geolocation.getCurrentPosition(onSuccess, onError, enableHighAccuracy: false);
     }
 
     // onSuccess Geolocation
